<resources>
    <string name="app_name">Next AFV</string>
    <string name="txt_btn_realizar_login">Realizar login</string>
    <string name="txt_btn_registrarse">Registrar-se</string>
    <string name="txt_label_email">E-mail</string>
    <string name="txt_hint_email_usuario">Digite seu e-mail...</string>
    <string name="txt_label_senha">Senha</string>
    <string name="txt_hint_senha_usuario">Digite sua senha...</string>
    <string name="txt_btn_entrar">Entrar</string>
    <string name="txt_sinc_configuracoes">Configurações</string>
    <string name="txt_btn_sincronizar">Sincronizar</string>
    <string name="txt_status_sincronizacao">Sincronizando...</string>
    <string name="txt_sinc_clientes">Clientes</string>
    <string name="txt_sinc_produtos">Produtos</string>
    <string name="txt_sinc_vendas">Vendas</string>
    <string name="txt_clientes_card_home">Clientes</string>
    <string name="txt_produtos_card_home">Produtos</string>
    <string name="txt_card_gestao_clientes">Gestão de clientes</string>
    <string name="txt_card_gestao_produtos">Gestão de produtos</string>
    <string name="txt_hint_pesquisar_clientes">Digite o nome, razão social ou e-mail...</string>
    <string name="txt_radio_pf">Pessoa física</string>
    <string name="txt_radio_pj">Pessoa juridica</string>
    <string name="txt_lb_email">Email*</string>
    <string name="txt_hint_campo_email_cliente">Digite o e-mail do cliente...</string>
    <string name="txt_lb_telefone_celular">Telefone celular*</string>
    <string name="txt_hint_campo_telefone_celular_cliente">ex: (00) 00000-0000</string>
    <string name="txt_lb_telefone_fixo">Telefone fixo</string>
    <string name="txt_hint_campo_telefone_fixo_cliente">ex: (00) 0000-0000</string>
    <string name="txt_lb_telefone_complementar">Telefone complementar</string>
    <string name="txt_cadastro_completo">Cadastro completo</string>
    <string name="txt_cadastro_endereco_cliente">Endereço</string>
    <string name="txt_lb_cep">CEP*</string>
    <string name="txt_hint_campo_cep_cliente">Digite o cep...</string>
    <string name="txt_lb_endereco">Endereço*</string>
    <string name="txt_hint_campo_endereco_cliente">Digite o endereço...</string>
    <string name="txt_btn_salvar_cliente">Salvar</string>
    <string name="txt_lb_complemento">Complemento</string>
    <string name="txt_hint_campo_complemento_cliente">Digite o complemento...</string>
    <string name="txt_lb_bairro">Bairro*</string>
    <string name="txt_hint_campo_bairro_cliente">Digite o bairro...</string>
    <string name="txt_lb_cidade">Cidade*</string>
    <string name="txt_hint_campo_cidade_cliente">Digite a cidade...</string>
    <string name="txt_lb_estado">Estado*</string>
    <string name="txt_lb_numero">Número</string>
    <string name="txt_hint_campo_numero_cliente">s/n</string>
    <string name="txt_lb_nome_completo">Nome completo*</string>
    <string name="txt_hint_campo_nome_completo_cliente">Digite o nome completo...</string>
    <string name="txt_lb_cpf">CPF*</string>
    <string name="txt_hint_campo_cpf_cliente">ex: 000.000.000-00</string>
    <string name="txt_lb_data_nascimento">Data de nascimento*</string>
    <string name="txt_hint_campo_data_nascimento_cliente">ex: 00/00/0000</string>
    <string name="txt_lb_genero_cliente">Gênero*</string>
    <string name="txt_perfil_usuario_logado_titulo">Perfil do usuário logado</string>
    <string name="txt_lb_perfil_nome_completo">Nome completo:</string>
    <string name="txt_lb_perfil_email">E-mail:</string>
    <string name="txt_content_description_btn_alterar_perfil">Botão para editar perfil do usuário logado</string>
    <string name="txt_lb_perfil_telefone_celular">Telefone celular</string>
    <string name="txt_lb_perfil_nivel_acesso">Nível de acesso</string>
    <string name="txt_quantidade_vendas">Quantidade de vendas</string>
    <string name="txt_quantidade_vendas_dia">Quantidade de vendas no dia</string>
    <string name="txt_quantidade_clientes_cadastrados">Clientes cadastrados</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_btn_adicionar_item_carrinho">Adicionar item no carrinho</string>
    <string name="txt_btn_adicionar_produto_carrinho">Adicionar produto no carrinho</string>
    <string name="txt_lb_razao_social">Razão social*</string>
    <string name="txt_hint_campo_razao_social_cliente">Digite a razão social...</string>
    <string name="txt_lb_inscricao_estadual">Inscrição estadual*</string>
    <string name="txt_hint_campo_inscricao_estadual_cliente">Digite a inscrição estadual...</string>
    <string name="txt_lb_cnpj">CNPJ*</string>
    <string name="txt_hint_campo_cnpj_cliente">Digite o cnpj...</string>
    <string name="txt_lb_site">Site</string>
    <string name="txt_hint_campo_link_site_cliente">Digite o link do site...</string>
    <string name="txt_nao_existem_clientes_cadastrados">Não existem clientes cadastrados.</string>
    <string name="txt_nao_informado">----- Não informado -----</string>
    <string name="txt_sinc_categorias_produtos">Categorias de produtos</string>
    <string name="txt_card_realizar_venda">Realizar venda</string>
    <string name="txt_menu_logout">Logout</string>
    <string name="txt_menu_sobre">Sobre</string>
    <string name="txt_sobre_chave_acesso">Entre em contato com a empresa a qual você faz parte para solicitar a chave de acesso.</string>
    <string name="txt_titulo_sobre_chave_acesso">Sobre a chave de acesso</string>
    <string name="txt_card_perfil">Perfil</string>
</resources>